cms: update About page "data-population"

--- a/src/pages/about/data-population.page.mdx
+++ b/src/pages/about/data-population.page.mdx
@@ -5,10 +5,114 @@ navigationMenu:
   position: 3
 toc: true
 ---
+## Types of content
+
+There are 5 main content types on the SSH Open Marketplace, which are considered to be representative for the large array of digital resources that can be found on this discovery platform.
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
+
+![Tool or service](/assets/images/categories/tool-or-service.svg)
+
+<div>
+
+**Tools & services**
+
+This type of content refers to all sorts of digital services or products, such as software, applications, programs, websites, programming libraries and APIs, that make tasks easier to execute. 
+Some of them can be accessed directly in web browsers whereas others have to be installed locally.
+_Examples:_ (1) The _[Gephi](/tool-or-service/87wJWo)_ tool is a visualisation and exploration software for all kinds of graphs and networks. (2) The _[DARIAH-DE Helpdesk (CLARIAH-DE, Text+)](/tool-or-service/riBkMh)_ is a service whose team is familiar with the humanities and cultural science research processes and may likely help you along with questions falling not directly into the services/resources of the mentioned initiatives.
+
+</div>
+</div>
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
+
+![Training Material](/assets/images/categories/training-material.svg)
+
+<div>
+
+**Training materials**
+
+Tutorials, lessons or didactic resources explaining how to perform an action or highlighting the
+potential learning outcomes gained from using that material.
+
+_Examples:_ (1) The lesson _[Cleaning Data with OpenRefine](/training-material/oaQM1D)_ which allows you to learn the principles and practice of data cleaning and how to use the OpenRefine tool. (2) The _[SSHOC Webinar: CLARIN Hands-on Tutorial on Transcribing Interview Data](/training-material/ITNpCC)_ which focuses on the role of automatic speech recognition – what are the opportunities, what are the pitfalls and to where can it be applied successfully.
+
+</div>
+</div>
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
+
+![Workflow](/assets/images/categories/workflow.svg)
+
+<div>
+
+**Workflows**
+
+Sequences of steps that one can perform on research data during their lifecycle. Workflows can be achieved by using diverse tools, resources  and methods, and the useful resources are connected to each step.
+
+_Examples:_ (1) _[Extract textual content from images](/workflow/qYzKVU)_ is a workflow composed of 13 steps coming from the Standardization Survival Kit useful for extracting textual content from images. (2) _[Intertextuality phenomena in European drama history](/workflow/DMJlzG)_ is a workflow composed of 4 steps useful for analysing the relationships between the characters in a drama based on monologue/dialogue.
+
+</div>
+</div>
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
+
+![Dataset](/assets/images/categories/dataset.svg)
+
+<div>
+
+**Datasets**
+
+A dataset is an organised collection of data. It is generally associated with a unique body of work, typically covers one topic at a time and is treated as a single unit by a computer.
+
+_Examples:_ (1) _[Parlamint](/dataset/9LlGMD)_ contains a collection of parliamentary datasets (corpora) in a number of languages and in a harmonized format that are processed linguistically, and indexed with popular concordancers.  (2) _[CoFiF-Corpus for Finance](/dataset/2AWjuo)_ is the first corpus comprising company reports in French; the documents are collected from the 60 largest French companies listed in France’s main stock indices CAC40 and CAC Next 20.
+
+</div>
+</div>
+
+<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
+
+![Publication](/assets/images/categories/publication.svg)
+
+<div>
+
+**Publications**
+
+Research results published in academic journals or non-peer-reviewed publication repositories such as Zenodo (our logic being that not all valuable academic production is necessarily in a traditional, peer-reviewed academic journal). The SSH Open Marketplace references **only** publications that can be connected to other resources (i.e. tools and services, training materials, workflows or datasets). As such, the SSH Open Marketplace is not an exhaustive collection of papers.
+
+_Examples:_ (1) _[PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora](/publication/aIYrN0)_ is a conference paper presented during the DH2020 Conference in which you can find an example of use of the SpaCy library (referenced as a tool in the SSH Open Marketplace). (2) _[Music Encoding Initiative Guidelines](/publication/8DmQJ6)_ are intended to serve as a reference tool for music encoders, and are linked to several workflows and related tools in the Marketplace.
+
+</div>
+</div>
+
+## Inclusion criteria for adding resources: 4 questions to ask
+
+In order to have high quality and high relevance content in the SSH Open Marketplace, we have established inclusion criteria for entry into the discovery platform. These apply both to individual items added manually by users, as well as to mass ingestions of entire sources (more on that below). 
+
+Here is a list of four questions to ask before adding a resource on the SSH Open Marketplace and the ensuing inclusion criteria: 
+
+1. The **relevance** of the resource. The question to ask is : _will this resource be relevant to the SSH scientific community?_ Thus, to be selected, any resource must fulfil at least two criteria: (1) scientific relevance and usefulness for SSH research and researchers and (2) pertinence to the digital methodologies used within the SSH landscape.
+2. The **technical status** of the resource. The question to ask is: _is the resource current, supported, and ideally open?_ The SSH Open Marketplace favours the uptake of Open Science workflows and open research practices. Software resources are preferably built upon open source solutions.\
+   Note: Given that the SSH Open Marketplace seeks to mirror actual research practices, commercial or non-current resources are also referenced where these are relevant for the scientific community.
+3. The **degree of compliance with Open Science** requirements of the resource. The question to ask is: _is the resource FAIR – Findable, Accessible, Interoperable and Re-usable - or contributing to the uptake of Open Science best practices?_ The SSH Open Marketplace maximises the findability and re-use of data, and guides users towards tools, services or training materials that can help them in their FAIRification of workflows.
+4. The **uniqueness** of the resource The question to ask is: _is the resource already in the Marketplace?_ If yes, there is no need to add it again, either as an individual item or with a source. Even though duplicate entries are dealt with within the Marketplace, ingesting identical (or worse almost identical) entries multiple times uses up valuable human resources that will be better put to use elsewhere considering the limited timeframe and personnel of the project
+
+## SSH Open Marketplace Core Principles
+
+
+
+1. **Contextualization** is one of the key pillars of the SSH Open Marketplace. It is meant to provide a discovery portal for tools and services, while placing these tools and services in context via publications, training materials, datasets, and workflows. As such, these last four categories are indexed in the SSH Open Marketplace insofar as they can be placed in relation with tools and services, and if no relation to a tool or service exists, they should not be accepted. 
+2. **Curation** is, alongside contextualization, a key pillar of the SSH Open Marketplace. We believe that accurate and up-to-date content is key to making the SSH Open Marketplace a rich and useful discovery portal. As such, data population and curation are at the heart of our work. Once (meta)data have been ingested in the Marketplace, we curate and enrich them thanks to a hybrid approach: automated checks are run on the ingested data, followed by manual review of the identified problems as well as of aspects that cannot be checked automatically. In this process, contributors and moderators are playing an essential role (See “How to contribute”). 
+3. **Quality of the (meta)data**: higher quality data will increase the quality of the Marketplace. This means that the more of the metadata fields in the Marketplace data model are covered by an item, the better (items with just a title and a link are inferior to ones containing a long description and maybe even a list of contributors) and the more good quality metadata in your item or source, the higher the overall quality of the item or source. _Note_: currently, most publications lack metadata. This is a temporary situation, which is due to the fact that they were automatically ingested with the purpose to automatically identify relations with the other types of resources included in the SSH Open Marketplace. 
+4. **Focus on primary sources:** in the Marketplace, we give priority to primary sources and exclude sources that only aggregate information that can be found elsewhere. Such “2nd hand metadata” introduces additional points of failure and using the primary source instead will likely result in higher quality metadata.
+5. The **technical interface**: it is easier to import a source into the Marketplace if it offers a well-documented API. Considering the limited human resources of the team, sources which needed a lot of additional work before they could be fed into the ingestion pipeline are placed very low on the priority list. 
+
+For more questions, please \[contact us](/contact).
+
 ## Sources
 
 During the development phase of the SSH Open Marketplace, we identified and prioritised **trusted
-sources** from which to gather information to populate the SSH Open Marketplace. Over the 3 years of
+sources** (i.e compliant with the Core Principles defined above) from which to gather information to populate the SSH Open Marketplace. Over the 3 years of
 the SSHOC project, 15 sources have been ingested for a total of over 5,000 individual items. The
 sources are listed below.
 
@@ -28,7 +132,7 @@ workflows to facilitate research and teaching.
 ![Standardization Survival Kit logo](/assets/cms/images/source-ssk-logo.svg)
 
 The [Standardisation Survival Kit](http://ssk.huma-num.fr/#/) presents a collection of research use
-case scenarios illustrating best practices in Digital Humanities and Heritage research.
+case scenarios illustrating best practices in Digital Humanities and Heritage research. The SSK website is now archived and all scenarios are directly hosted and visible from the SSH Open Marketplace.
 
 ![Language Resource Switchboard logo](/assets/cms/images/source-language-resource-switchboard-logo.png)
 
@@ -101,178 +205,5 @@ material to expect from the source.
 </div>
 
 If you don't see some of these sources in the Marketplace, it is because they are still in the
-process of being ingested. New sources will also be regularly added. Between 1 to 4 sources per year
-are expected starting mid-2022. As there are a few criteria to comply with, please
+process of being ingested. New sources are also regularly added (between 1 to 2 sources per year). As there are some criteria to comply with, please
 [check the Contribute section](/contribute/overview) if you would like to suggest new sources.
-
-## Types of content
-
-The conceptual approach used to structure and classify the content of the SSH Open Marketplace led
-to the identification of 5 main content types.
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
-![Tool or service](/assets/images/categories/tool-or-service.svg)
-
-<div>
-
-### Tools & services
-
-Materials or products used to perform activities such as:
-
-- Desktop clients solutions (to be installed locally)
-- Browser-based or command-line based resources
-- Mobile apps
-- Programming libraries or APIs
-- Data catalogues
-
-_Example:_ [Gephi](/tool-or-service/87wJWo) is a visualisation and exploration software for all
-kinds of graphs and networks.
-
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
-![Training Material](/assets/images/categories/training-material.svg)
-
-<div>
-
-### Training materials
-
-Tutorials, lessons or didactic resources explaining how to perform an action or highlighting the
-learning outcomes one would gain from engaging with the material.
-
-_Example:_ The [lesson "Beginner's Guide to Twitter Data"](/training-material/7dimO5) (Programming
-Historian website).
-
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
-![Workflow](/assets/images/categories/workflow.svg)
-
-<div>
-
-### Workflows
-
-Sequences of operation/steps performed on research data during their lifecycle. Workflows can be
-achieved by using diverse tools and facilities, and useful resources are connected to each step.
-
-_Example:_ ["Extract textual content from images"](/workflow/qYzKVU) is a workflow composed of 13
-steps coming from the Standardization Survival Kit.
-
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
-![Dataset](/assets/images/categories/dataset.svg)
-
-<div>
-
-### Datasets
-
-Single digital objects or collections of data, records, or information that is kept as a persistent
-unit of information in the knowledge generation process. Datasets are used as evidence for some
-phenomena.
-
-_Example:_ [Parlamint 2.0](/dataset/9LlGMD)
-
-</div>
-</div>
-
-<div style={{ display: 'grid', gap: 'var(--space-4)', gridTemplateColumns: 'var(--prose-column-xs) 1fr' }}>
-
-![Publication](/assets/images/categories/publication.svg)
-
-<div>
-
-### Publications
-
-Research results published in academic journals or repositories. The SSH Open Marketplace references
-only publications that can be connected to other resources and is not an exhaustive collection of
-papers.
-
-_Example:_
-["PoetryLab. An Open Source Toolkit for the Analysis of Spanish Poetry Corpora"](/publication/aIYrN0)
-is a Conference Paper presented during the DH2020 Conference in which you can find an example of use
-of the SpaCy library (referenced as a tool in the SSH Open Marketplace).
-
-</div>
-</div>
-
-## Inclusion criteria
-
-In order to ensure high quality data in the SSH Open Marketplace, we have established inclusion
-criteria for entry into the database. These apply to both individual items, as well as mass
-ingestions of entire sources (more on that below).
-
-The Marketplace comes with a good coverage of resources relevant to academics, scholars and students
-from the Social Sciences and Humanities but research is dynamic and you may point us to new and
-upcoming items, or even entire collections of resources. You may suggest such collections as new
-sources to the Marketplace. import withHeadingIds from 'remark-slug' An item or source has to match
-the following selection criteria:
-
-- The **relevance of the data**: Above all, the **SSH Open Marketplace serves researchers in the
-  social sciences and the humanities**, therefore, there must be an established link between the
-  content added into the Marketplace and the SSH. The broad scope of the SSH Open Marketplace means
-  that to be selected, any resource must fulfill at least two criteria: (1) relevance for SSH
-  research and researchers and (2) pertinence to the digital methodologies used within the SSH
-  landscape.
-- From a technical point of view, **the data must also be current, supported, and ideally open**.
-  The SSH Open Marketplace favours the uptake of Open Science workflows and open research practices.
-  Software resources are preferably built upon open source solutions. Note: Given that the SSH Open
-  Marketplace seeks to mirror actual research practices, commercial or non-current resources are
-  also referenced where these are relevant for the scientific community.
-- **Contextualization** is one of the key pillars of the SSH Open Marketplace. It is meant to
-  provide a discovery portal for tools and services, while placing these tools and services in
-  context via publications, training materials, datasets, and workflows. As such, these last four
-  categories are indexed in the SSH Open Marketplace insofar as they can be placed in relation with
-  tools and services, and if no relation to a tool or service exists, they should not be accepted.
-- the **quality of the (meta)data**: higher quality data will increase the quality of the
-  Marketplace; this means that the more of the metadata fields in the Marketplace data model are
-  covered by an item, the better (items with just a title and a link are inferior to ones containing
-  a long description and maybe even a list of contributors) and the more good quality metadata in
-  your item or source , the higher the overall quality of the item or source.
-- the **uniqueness of the data**: if the data is already in the Marketplace, there is no need to add
-  it again, either as an individual item or with a source. Even though duplicate entries are dealt
-  with within the Marketplace, ingesting identical (or worse almost identical) entries multiple
-  times uses up valuable human resources that will be better put to use elsewhere considering the
-  limited timeframe and personnel of the project
-- the **expected usefulness** for the SSH community: are the items in this source possibly of use to
-  SSH researchers; it could be that they are widely used already or that they offer new and
-  interesting possibilities
-- the **representativity** of the source for the SSH domain: with the various partners in the SSHOC
-  project coming from different parts of the wide field of SSH (e.g. CESSDA being mostly concerned
-  with social sciences, while CLARIN is more linguistics/language focused), considerable effort was
-  made to find sources that represent all the different facets of the SSH landscape; it also made
-  sense to prioritize sources coming from the SSHOC project itself, assuming that they will have
-  this kind of representativity baked in already.
-- Finally, in terms of legal and ethical requirements, the SSH Open Marketplace maximises the
-  findability and re-use of data in line with the **FAIR data principles** – Findable, Accessible,
-  Interoperable and Re-usable – for research data, and guides users towards tools, services or
-  training materials that can help them in their FAIRification of workflows. Of necessity, the SSH
-  Open Marketplace is GDPR compliant. This is reflected in the manner of presentation of the
-  resources and – more obviously – in the management of users.
-
-Additionally, when suggesting a source for the Marketplace, please keep in mind the following
-additional criteria:
-
-- the **technical interface**: it is easier to import a source into the Marketplace if it offers a
-  well-documented API; considering the limited human resources of the project, sources which needed
-  a lot of additional work before they could be fed into the ingestion pipeline were placed very low
-  on the priority list
-- It was decided to focus on **primary sources** and exclude sources that only aggregate information
-  that can be found elsewhere; such "2nd hand metadata" introduces additional points of failure and
-  using the primary source instead will likely result in higher quality metadata
-
-We believe that accurate and up-to-date content is key to making the SSH Open Marketplace a rich and
-useful discovery portal, data population and curation are at the heart of our work. Once (meta)data
-have been ingested in the Marketplace, we curate and enrich them thanks to a hybrid approach:
-automated checks are run on the ingested data, followed by manual review of the identified problems
-as well as of aspects that cannot be checked automatically. In this process, contributors and
-moderators are playing an essential role (See "How to contribute" below).
-
-For more questions, please [contact us](/contact).
