cms: update About page "communication-kit"

--- a/src/pages/about/communication-kit.page.mdx
+++ b/src/pages/about/communication-kit.page.mdx
@@ -1,1 +1,19 @@
+---
+title: Communication kit
+navigationMenu:
+  title: Communication kit
+  position: 10
+---
+All the materials you need to promote the SSH Open Marketplace.
 
+- [Download the SSH Open Marketplace logos](https://github.com/SSHOC/sshoc-marketplace-frontend/tree/main/public/assets/images)
+- [Download the flyer (printing and online dissemination)](https://doi.org/10.5281/zenodo.7503170)
+
+Reuse some of the slides produced by the team to present the SSH Open Marketplace:
+
+- Laure Barbot, & Klaus Illmayer. (2022, July 28). The SSH Open Marketplace: an introduction. Zenodo. [https://doi.org/10.5281/zenodo.6924238](https://doi.org/10.5281/zenodo.6924238)
+- Laure Barbot, & Edward J. Gray. (2022, March 22). Partager et contextualiser ses outils numériques. Tout savoir sur le SSH Open Marketplace. Zenodo. [https://doi.org/10.5281/zenodo.6375530](https://doi.org/10.5281/zenodo.6375530)
+- Franciska de Jong. (2022, January 26). A thematic marketplace: The SSH Open Marketplace. Zenodo. [https://doi.org/10.5281/zenodo.5906660](https://doi.org/10.5281/zenodo.5906660)
+- Fischer, Frank, Burghardt, Manuel, Luhmann, Jan, Barbot, Laure, Moranville, Yoann, & Zarei, Alireza. (2021, March 26). Die Werkbänke der Digital Humanities: Zur Rolle von Tools und Software für die Forschungsarbeit. vDHd2021: "Experimente". Zenodo. [https://doi.org/10.5281/zenodo.4639228](https://doi.org/10.5281/zenodo.4639228)
+
+All these materials are under permissive licences. If you want to promote the SSH Open Marketplace as part of your own work, do not hesitate to reuse some of these materials, and to let the team know about it, so that your work can also be referenced in this section.
