--- a/src/pages/about/service.page.mdx
+++ b/src/pages/about/service.page.mdx
@@ -29,7 +29,9 @@ The SSH Open Marketplace is _not_:
 - a commercial Marketplace. There is nothing to sell in the SSH Open Marketplace. Commercial
   software/services can be referenced.
 
-What does the SSH Open Marketplace have to offer you? Watch the “SSH Open Marketplace - explained the easy way” to understand what the service has to offer!
+## What does the SSH Open Marketplace have to offer you? 
+
+Watch the “SSH Open Marketplace - explained the easy way” to understand what the service has to offer!
 
 <iframe src="https://www.youtube-nocookie.com/embed/4tyZ4vhrM9s" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowFullScreen width="100%" style={{ aspectRatio: '16 / 9' }} />
 
@@ -48,20 +50,4 @@ Using the SSH Open Marketplace, you can:
 - Contribute to the Marketplace by suggesting new content or enriching existing items. See the
   [Contribute pages](/contribute/overview) for all the details.
 - Re-use the SSH Open Marketplace content using the Application programming Interface (API). See the
-  API documentation section, if you want to know more.
-
-
-
-## Communication Kit
-
-- [Download the SSH Open Marketplace logos](https://github.com/SSHOC/sshoc-marketplace-frontend/tree/main/public/assets/images)
-- [Download the flyer (printing and online dissemination)](https://doi.org/10.5281/zenodo.7503170)
-
-Reuse some of the slides produced by the team to present the SSH Open Marketplace:
-
-- Laure Barbot, & Klaus Illmayer. (2022, July 28). The SSH Open Marketplace: an introduction. Zenodo. [https://doi.org/10.5281/zenodo.6924238](https://doi.org/10.5281/zenodo.6924238)
-- Laure Barbot, & Edward J. Gray. (2022, March 22). Partager et contextualiser ses outils numériques. Tout savoir sur le SSH Open Marketplace. Zenodo. [https://doi.org/10.5281/zenodo.6375530](https://doi.org/10.5281/zenodo.6375530)
-- Franciska de Jong. (2022, January 26). A thematic marketplace: The SSH Open Marketplace. Zenodo. [https://doi.org/10.5281/zenodo.5906660](https://doi.org/10.5281/zenodo.5906660)
-- Fischer, Frank, Burghardt, Manuel, Luhmann, Jan, Barbot, Laure, Moranville, Yoann, & Zarei, Alireza. (2021, March 26). Die Werkbänke der Digital Humanities: Zur Rolle von Tools und Software für die Forschungsarbeit. vDHd2021: "Experimente". Zenodo. [https://doi.org/10.5281/zenodo.4639228](https://doi.org/10.5281/zenodo.4639228)
-
-If you want to promote the SSH Open Marketplace as part of your own work, do not hesitate to reuse some of these materials, and to let the team know about it, so that your work can also be referenced in this section.
+  [API documentation section](/about/api-documentation), if you want to know more.
