--- a/src/pages/about/frequently-asked-questions.page.mdx
+++ b/src/pages/about/frequently-asked-questions.page.mdx
@@ -9,24 +9,34 @@ Welcome to the FAQ section of the SSH Open Marketplace. Here you can find the mo
 and their answers. This page will be updated regularly to address the most frequently asked
 questions.
 
-- **How can I contribute to the SSH Open Marketplace?**
+## About the SSH Open Marketplace as a discovery portal
 
-  The SSH Open Marketplace is a collaborative service, to which any user can contribute, creating
-  new entries in the catalogue or enriching existing ones. You can also let us know what you would
-  like to add or report a bug using the Report an issue function which is available on each page.
-  All the ways to contribute are explained in
-  [this dedicated section of the website](/contribute/overview).
-- **Why do you promote commercial software?**
+- **What is the SSH Open Marketplace?**
 
-  The SSH Open Marketplace promotes any tools and services used by the SSH research communities. Our
-  goal is to encourage the uptake of open methods, but we choose to also showcase the reality of
-  existing research practices and this includes commercial software. We are not affiliated to or
-  receiving any revenues from the commercial software referenced in this website.
+  The SSH Open Marketplace is a discovery portal and aggregator for Social Sciences and Humanities (SSH) related resources. It catalogues and presents useful tools and services for SSH researchers and links them with other resources to facilitate their uptake. It may serve as an entry point in the European Open Science Cloud (EOSC) for researchers, scholars, and students from the SSH. [See the description of the service in the “What is the SSH Open Marketplace” page](/about/service).
+- **What is the difference between the SSH Open Marketplace and the [EOSC Marketplace](https://marketplace.eosc-portal.eu/)? Where should I put my service?** 
+
+  The SSH Open Marketplace is geared towards the social sciences and humanities, whereas EOSC is for all sciences. As such, the requirements are more strict to enter the EOSC Marketplace. In general, EOSC Marketplace entries are mature, high TRL (Technological Readiness Level) services and are onboarded by the institutional entity responsible for their development and maintenance. Entries on the SSH Open Marketplace are, above all, more focused on social sciences and humanities, which permits us to be more flexible in accepting tools and services still in development. As well, the contextualisation of the SSH Open Marketplace is another difference. Finally, know that all SSH related tools in the EOSC Marketplace are automatically ingested in the SSH Open Marketplace, so there is no need to worry about double posting. [See “SSHOC and the EOSC” page for more information](/about/sshoc-eosc).
+- **What is the relationship between the SSH Open Marketplace and its entries?**
+
+  The SSH Open Marketplace serves as an aggregator for third party resources. It offers detailed information on SSH relevant resources and access to them. The SSH Open Marketplace does not provide these resources, it guides its users to them. See the description of the service in the [“What is the SSH Open Marketplace” page](/about/service).
 - **Is the SSH Open Marketplace multilingual?**
 
   For the sake of simplicity the SSH Open Marketplace comes (for the moment) with an English user
   interface. Furthermore, the majority of the records are in English. However, the service
   encourages the addition of records in other European languages.
+
+## Using and contributing to the SSH Open Marketplace
+
+- **How can I use the SSH Open Marketplace?**
+
+  It is very easy to use the SSH Open Marketplace. You use the search function or browse the facets to find resources of interest. Once you access the individual detail page of an entry you find all available information on the specific resource, relations to other resources or alternative resources. [See our “How to use it?” page for more details](/about/service).
+- **How can I contribute to the SSH Open Marketplace?**
+
+  The SSH Open Marketplace is a collaborative service, to which any user can contribute, creating
+  new entries in the catalogue or enriching existing ones. You can also let us know what you would
+  like to add or report a bug using the Report an issue function which is available on each page.
+  See also the [“Create an individual item” tutorial on this page](/contribute/create-an-individual-item).
 - **As a researcher in Social Sciences and Humanities, why should I contribute to the SSH Open
   Marketplace?**
 
@@ -34,12 +44,30 @@ questions.
   materials you've created as items in the Marketplace - or to support the uptake of the tools you
   use in your work on a daily basis - by creating or enriching the records of the resources you are
   familiar with.
+- **How can I log in?**
+
+  You may log into the SSH Open Marketplace because you want to suggest changes or corrections for a certain record. Or you may want to create an entirely new record. All of this is being done in the Edit Form of the SSH Open Marketplace. You can reach the Edit Form via the Log in function in the top right corner of the SSH Open Marketplace. You may use already available credentials like a Google or DARIAH account or your institutional ID. The SSH Open Marketplace is part of the EOSC AAI, which allows for a very convenient user authentication. See also the [“Create an individual item” tutorial on this page](/contribute/create-an-individual-item).
+- **I represent a certain community or infrastructure initiative. Is the SSH Open Marketplace open for us?**
+
+  Yes, it is! The SSH Open Marketplace currently aggregates its content from a range of trusted sources like Programming Historian, the CLARIN Resource Families or DARIAH-Campus to name only three. Additionally, the SSH Open Marketplace cooperates with communities and infrastructure initiatives such as DARIAH-EU, CESSDA or CLARIN. If you think, the resources, methods and services of your community or initiative would fit into the SSH Open Marketplace, reach out to the Editorial Board. We are happy to discuss the options for individual cooperation with you.
+
+## About the SSH Open Marketplace (meta)data
+
 - **Can I upload data to the SSH Open Marketplace?**
 
   As a simple answer: no. The SSH Open Marketplace is a discovery portal for tools & services,
   training materials, datasets, publications and workflows, not a research data repository. To find
   suitable research data repositories for your research data we advise that you consult established
   services like [re3data](https://www.re3data.org/).
-- **What is the difference between the SSH Open Marketplace and the [EOSC Marketplace](https://marketplace.eosc-portal.eu/)? Where should I put my service?** 
+- **Under which item type should I register my database?** 
+  Databases or corpora with a frontend should generally be considered as services, they provide an infrastructure and service supporting the diffusion of datasets. However, a mere copy (or “dump”) of a database should be considered a dataset. If you are unsure, feel free to contact the Editorial Board.
+- **Why are there “empty entries” in the SSH Open Marketplace which contain no further or useful information?**
+  Regarding publications, currently most of them lack metadata. This is a temporary situation. Curation efforts are being made to improve the metadata quality, and publications without relations to other Marketplace items will soon be deleted. 
+- **Why do you promote commercial software?**
 
-  The SSH Open Marketplace is geared towards the social sciences and humanities, whereas EOSC is for all sciences. As such, the requirements are more strict to enter the EOSC Marketplace. In general, EOSC Marketplace entries are mature, high TRL (Technological Readiness Level) services and are onboarded by the institutional entity responsible for their development and maintenance. Entries on the SSH Open Marketplace are, above all, more focused on social sciences and humanities, which permits us to be more flexible in accepting tools and services still in development. As well, the contextualisation of the SSH Open Marketplace is another difference. Finally, know that all SSH related tools in the EOSC Marketplace are automatically ingested in the SSH Open Marketplace, so there is no need to worry about double posting.
+  The SSH Open Marketplace promotes any tools and services used by the SSH research communities. Our
+  goal is to encourage the uptake of open methods, but we choose to also showcase the reality of
+  existing research practices and this includes commercial software. We are not affiliated to or
+  receiving any revenues from the commercial software referenced in this website.
+- **What is the preferred granularity for resources showcased (i.e. if a training material is part of a five-chapter lesson, which entry/pointer should be used to record this resource on the SSH Open Marketplace)?** 
+There are no strict rules, so it is up to you to decide what you think would be the most relevant for a newcomer to your resource. It also depends on how much time you can spend on creating the entry/entries in the SSH Open Marketplace. As you can see in the [“create an individual entry” tutorial](/contribute/create-an-individual-item), each record should come with as much detail as is useful for the user. 
